# research-agent

backend/: Phase1_ingest.py  Phase2_agent.py  Phase3_api.py  requirements.txt
research-cli/: Cargo.toml
research-cli/src/: main.rs
