[package]
name = "research-cli"
version = "0.1.0"
edition = "2021"
 
[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
indicatif = "0.17"
futures-util = "0.3"
anyhow = "1"
dotenvy = "0.15"